--- a/ProductMVC1/Views/Products/Create.cshtml
+++ b/ProductMVC1/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductMVC1.Data.Product
+﻿@model ProductMVC1.Models.ViewModels.Products.ProductViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -28,26 +28,8 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Categories" class="control-label"></label>
-                <select asp-for="Categories" class="form-control" asp-items="ViewBag.Categories"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Modified" class="control-label"></label>
-                <input asp-for="Modified" class="form-control" />
-                <span asp-validation-for="Modified" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedById" class="control-label"></label>
-                <select asp-for="CreatedById" class ="form-control" asp-items="ViewBag.CreatedById"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedById" class="control-label"></label>
-                <select asp-for="ModifiedById" class ="form-control" asp-items="ViewBag.ModifiedById"></select>
+                <label asp-for="CategoryIds" class="control-label"></label>
+                <select asp-for="CategoryIds" class="form-control" asp-items="ViewBag.Categories"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
