--- a/ProductMVC1/Views/Products/Delete.cshtml
+++ b/ProductMVC1/Views/Products/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductMVC1.Data.Product
+﻿@model ProductMVC1.Models.ViewModels.Products.ProductDetailsViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -42,16 +42,16 @@
             @Html.DisplayFor(model => model.Modified)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
+            @Html.DisplayNameFor(model => model.CreatedByName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy.Id)
+            @Html.DisplayFor(model => model.CreatedByName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedBy)
+            @Html.DisplayNameFor(model => model.ModifiedByName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedBy.Id)
+            @Html.DisplayFor(model => model.ModifiedByName)
         </dd>
     </dl>
     
