--- a/ProductMVC1/Views/Products/Details.cshtml
+++ b/ProductMVC1/Views/Products/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductMVC1.Data.Product
+﻿@model ProductMVC1.Models.ViewModels.Products.ProductDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -26,7 +26,7 @@
             Categories
         </dt>
         <dd class="col-sm-10">
-            @string.Join(", ", Model.Categories.Select(item => item.Title).ToList())
+            @string.Join(", ", Model.CategoriesName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
@@ -47,16 +47,16 @@
             @Html.DisplayFor(model => model.Modified)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
+            @Html.DisplayNameFor(model => model.CreatedByName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy.Email)
+            @Html.DisplayFor(model => model.CreatedByName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedBy)
+            @Html.DisplayNameFor(model => model.ModifiedByName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedBy.Email)
+            @Html.DisplayFor(model => model.ModifiedByName)
         </dd>
     </dl>
 </div>
